--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,9 @@
 %html
   %head
     %title NHS Time Tag
-    = stylesheet_link_tag "resets/resets"
     = stylesheet_link_tag :all
     = javascript_include_tag :defaults
+    = javascript_include_tag 'clinic'
     = csrf_meta_tag
 
   %body
