Made a simple version of the consultant view, added function to doctor to get current status, fixed clinic so it has many doctors, not just one

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
   %head
     %title NHS Time Tag
     = stylesheet_link_tag :all
+    = stylesheet_link_tag "resets/resets"
     = javascript_include_tag :defaults
     = javascript_include_tag 'clinic'
     = csrf_meta_tag
