--- a/app/views/clinics/index.html.haml
+++ b/app/views/clinics/index.html.haml
@@ -1,7 +1,3 @@
-= link_to_function "Update", "update_notifications()"
-#notifications
-  .notification
-    .title
-      This is a notification
-    .message
-      So and so has cancelled an appointment
+%ul
+  - @clinics.each do |clinic|
+    %li= link_to (clinic.name), clinic
