Bit more styling of clinic css and application css (padding in main area)

--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -89,7 +89,8 @@ html, body {height: 100%;}
 }
 
 #body {
-    padding-bottom:30px;   /* Height of the footer */
+    padding-top: 20px;
+    padding-bottom:50px;   /* Height of the footer */
     min-height: 200px;
 }
 
