--- a/public/stylesheets/sass/clinic.scss
+++ b/public/stylesheets/sass/clinic.scss
@@ -1,18 +1,23 @@
 @import "rounded";
-
-.doctor{
-  border: 1px solid #CCCCCC;
-  background-color: #FFFFFF;
-  padding: 10px;
-  @include rounded(all,4px);
+#doctors{
+  width: 700px;
+  .doctor{
+    border: 1px solid #CCCCCC;
+    background-color: #FFFFFF;
+    padding: 10px;
+    @include rounded(all,4px);
+  }
 }
-.notification {
-  width: 200px;
-  border: 1px solid #000000;
-  background-color: #eeeeee;
-  padding:10px;
+
+#notifications{
+  .notification {
+    width: 200px;
+    border: 1px solid #000000;
+    background-color: #eeeeee;
+    padding:10px;
   
-  .title{
-    font-weight: bold;
+    .title{
+      font-weight: bold;
+    }
   }
 }
