--- a/public/stylesheets/sass/clinic.scss
+++ b/public/stylesheets/sass/clinic.scss
@@ -19,49 +19,64 @@
       margin-bottom:10px;
       float:left;
       border-width:0px;
-      &.not-delayed{
-        background-color:#A3E639;
-      }
-      &.delayed{
-        background-color:#FEEFB3;
-      }
-      &.severely-delayed{
-        background-color:#FFBABA;
-      }
     }
     .update-box{
       float:right;
-      width:200px;
-      margin-right:-160px;
+      width:160px;
+      margin-right:-120px;
       height:100px;
       background-color:#eeeeee;
       border-left:2px solid #333333;
       overflow: hidden;
-      .handle{
-        float:left;
-        margin-left:10px;
-        margin-right:15px;
-        margin-top: 21px;
-        width:20px;
-        height:20px;
-        background-repeat: no-repeat;
-        &.expand{
-          background-image: url('../images/icons/control_rewind_blue.png');
+      .ub_content{
+        .handle{
+          float:left;
+          margin-left:10px;
+          margin-right:15px;
+          margin-top: 21px;
+          width:20px;
+          height:20px;
+          background-repeat: no-repeat;
+          &.expand{
+            background-image: url('../images/icons/control_rewind.png');
+            &:hover{
+              background-image: url('../images/icons/control_rewind_blue.png');
+              cursor:pointer;
+            }
+          }
+          &.contract{
+              background-image: url('../images/icons/control_fastforward.png');
+              &:hover{
+                background-image: url('../images/icons/control_fastforward_blue.png');
+                cursor:pointer;
+              }
+          }
         }
-        &.contract{
-            background-image: url('../images/icons/control_fastforward_blue.png');
+        .delay_form{
+          margin-top:14px;
+          float:left;
+          margin-right:10px;
         }
-      }
-      .delay_form{
-        margin-top:14px;
-        float:left;
-        margin-right:10px;
-      }
-      .button{
-        margin-top: 21px;
+        .button{
+          margin-top: 21px;
         
-        float:left;
+          float:left;
+        }
       }
+      .ub_message{
+        display:none;
+        margin:10px;
+      }
+    }
+    
+    .not-delayed{
+      background-color:#A3E639;
+    }
+    .delayed{
+      background-color:#FEEFB3;
+    }
+    .severely-delayed{
+      background-color:#FFBABA;
     }
   }
 }
