--- a/app/views/doctors/_recent_cancellations.html.haml
+++ b/app/views/doctors/_recent_cancellations.html.haml
@@ -1,5 +1,5 @@
 - @appointments.each do |appointment|
-  .notification
+  .notification.cancellation.new
     .title
       = appointment.patient.name
     .message
