--- a/public/stylesheets/sass/clinic.scss
+++ b/public/stylesheets/sass/clinic.scss
@@ -8,6 +8,7 @@
     padding: 0px;
     overflow: hidden;
     height:60px;
+    margin-bottom:10px;
     .name{
       padding: 20px;
       font-size: 1.2em;
