--- a/public/stylesheets/sass/clinic.scss
+++ b/public/stylesheets/sass/clinic.scss
@@ -1,83 +1,139 @@
 @import "shadows";
+@import "colours";
 
-#doctors{
-  width: 700px;
+#logo{
+  width: 278px;
+  height: 162px;
+  background-image: url('../images/logo.png');
+  background-repeat: no-repeat;
+}
+
+#page{
+  margin-top: 20px;
+}
+
+#doctors_wrapper{
+  background-image: url('../images/doctor_header.png');
+  background-repeat: no-repeat;
+  background-position: top left;
+  padding: 50px 0px 0px 8px;
   float:left;
-  .doctor{
-    @include text_shadow(1px, 1px, 2px, #cccccc);
-    padding: 0px;
-    overflow: hidden;
-    height:60px;
-    margin-bottom:10px;
-    .name{
-      padding: 20px;
-      font-size: 1.2em;
-      float:left;
-      margin-right:40px;
-    }
-    .status{
-      margin-top:10px;
+  #doctors{
+    border: 2px solid $dark_purple;
+    padding: 20px;
+    
+    .doctor{
+      width: 660px;
+      border:1px solid #CCCCCC;
       margin-bottom:10px;
-      float:left;
-      border-width:0px;
-    }
-    .update-box{
-      float:right;
-      width:160px;
-      margin-right:-120px;
-      height:100px;
-      background-color:#eeeeee;
-      border-left:2px solid #333333;
+      height:60px;
       overflow: hidden;
-      .ub_content{
+      
+      
+      .name{
+        font-size: 1.3em;
+        margin-top: 20px;
+        margin-left: 20px;
+        float:left;
+        width:250px;
+      }
+      
+      .status{
+        color:#FFFFFF;
+        background-color: $dark_purple;
+        margin-top: 12px;
+        width:150px;
+        padding:10px;
+        float:left;
+      }
+      
+      .update-box{
+        float:right;
+        width:150px;
+        margin-right:-110px;
+        height:100px;
+        background-color:#ffffff;
+        border-left:2px solid #CCCCCC;
+        overflow: hidden;
+        
         .handle{
           float:left;
-          margin-left:10px;
-          margin-right:15px;
-          margin-top: 21px;
-          width:20px;
-          height:20px;
+          margin-left:5px;
+          margin-right:18px;
+          margin-top: 16px;
+          width:29px;
+          height:30px;
           background-repeat: no-repeat;
+          
+          background-repeat: no-repeat;
+          
+          &:hover{
+            cursor:pointer;
+          }
+          
           &.expand{
-            background-image: url('../images/icons/control_rewind.png');
-            &:hover{
-              background-image: url('../images/icons/control_rewind_blue.png');
-              cursor:pointer;
-            }
+            background-image: url('../images/arrow_buttons.png');
+            background-position: 0px -30px;
           }
+          
           &.contract{
-              background-image: url('../images/icons/control_fastforward.png');
-              &:hover{
-                background-image: url('../images/icons/control_fastforward_blue.png');
-                cursor:pointer;
-              }
+            background-image: url('../images/arrow_buttons.png');
+            background-position: 0px 0px;
+          }
+        }  
+        
+        .form_content{
+        padding-top:15px;
+          .delay_form{
+            float:left;
+          }
+          
+          .button{
+            float:left;
+            margin: 8px 0px 0px 10px;
           }
         }
-        .delay_form{
-          margin-top:14px;
-          float:left;
-          margin-right:10px;
-        }
-        .button{
-          margin-top: 21px;
-        
-          float:left;
-        }
       }
-      .ub_message{
-        display:none;
-        margin:10px;
-      }
-    }
-    
-    .not-delayed{
-      background-color:#A3E639;
-    }
-    .delayed{
-      background-color:#FEEFB3;
-    }
-    .severely-delayed{
-      background-color:#FFBABA;
     }
   }
 }
+
+#notifications_wrapper{
+  background-image: url('../images/notifications_header.png');
+  background-repeat: no-repeat;
+  background-position: top left;
+  padding: 50px 0px 0px 7px;
+  float:right;
+  
+  #notifications{
+    border: 2px solid $dark_purple;
+    padding: 20px;
+    width: 180px;
+    min-height:250px;
+    max-height:500px;
+
+    .notification {
+      padding:5px;
+      background-color: #BDE5F8;
+      border:2px solid #FFFFFF;
+
+      &.new{
+        display:none;
+      }
+      &:hover{
+        border-color:#D8000C;
+      }
+
+      &.cancellation{
+        color: #D8000C;
+        background-color: #FFBABA;
+      }
+      .title{
+        font-weight: bold;
+      }
+
+      margin-bottom:10px;
+    }
+  }
+}
+
