add link back to clinic from cancellation confirmation

--- a/app/views/appointments/cancel.html.haml
+++ b/app/views/appointments/cancel.html.haml
@@ -1,1 +1,2 @@
-%p= "Appointment for #{@appointment.patient.name} with #{@appointment.doctor.name} in the #{@appointment.doctor.clinic.name} at #{@appointment.datetime} has been successfully cancelled" + (@appointment.reschedule ? " and been marked for rescheduling" : "")
+%p= "Appointment for #{@appointment.patient.name} with #{@appointment.doctor.name} in the #{@appointment.doctor.clinic.name} clinic at #{@appointment.datetime} has been successfully cancelled" + (@appointment.reschedule ? " and been marked for rescheduling" : "")
+%p= link_to ("Back to #{@appointment.doctor.clinic.name} clinic"), @appointment.doctor.clinic
