--- a/app/views/clinics/index2.html.haml
+++ b/app/views/clinics/index2.html.haml
@@ -2,7 +2,7 @@
 #page
   #clinics_container
     - @clinics.each do |clinic|
-      .clinic{:class => clinic.status}
+      %a{:href=>"/clinics/#{clinic.id}", :class=>"clinic #{clinic.status}"}
         .name
           return "ontime"
           = clinic.name
