--- a/public/stylesheets/sass/clinic.scss
+++ b/public/stylesheets/sass/clinic.scss
@@ -113,6 +113,7 @@
     max-height:500px;
 
     .notification {
+      font-size: 0.8em;
       padding:5px;
       background-color: #BDE5F8;
       border:2px solid #FFFFFF;
