--- a/public/stylesheets/sass/cliniclist.scss
+++ b/public/stylesheets/sass/cliniclist.scss
@@ -1,10 +1,12 @@
 @import "shadows";
 @import "colours";
+@import "rounded";
 
 a{
   display: block;
   color: #333333;
 }
+
 body{
   background-color:#eeeeee;
 }
@@ -13,28 +15,36 @@ body{
   margin-top: 0px;
 }
 
-#patient_logo{
+#clientlist_logo{
   width: 996px;
-  height: 390px;
+  height: 200px;
   background-image: url('../images/patient_head.png');
   background-repeat: no-repeat;
   background-position: center top;
 }
 
-#hospitals_container{
+#clinics_container{
   padding:20px;
   background:#FFFFFF;
   border:1px solid $dark_purple;
   
-  .hospital{
+  .clinic{
     padding:20px;
     background-color: #EEEEEE;
     @include text_shadow(1px, 1px, 1px, #CCCCCC);
     margin-bottom:10px;
     
-    &:hover{
-      background-color:#BDE5F8;
-      cursor: pointer;
+    &.ontime {
+        color: #4F8A10;
+        background-color: #DFF2BF;
+    }
+    &.delayed {
+      color: #9F6000;
+      background-color: #FEEFB3;
+    }
+    &.vdelayed {
+        color: #D8000C;
+        background-color: #FFBABA;
     }
     .name{
       margin-top:2px;
@@ -42,19 +52,14 @@ body{
       font-size: 1.5em;
     }
     
-    .button{
+    .status{
+      color: #333333;
+      font-size:1.2em;
       float:right;
-      width:29px;
-      height:30px;
-      background-repeat: no-repeat;
-      
-      background-repeat: no-repeat;
-      
-      &:hover{
-        cursor:pointer;
-      }
-      background-image: url('../images/arrow_buttons.png');
-      background-position: 0px 0px;
+      @include rounded(all, 8px);
+      background-color:#EEEEEE;
+      padding:10px;
+      opacity: 0.6;
     }
   }
 }
